# sime

./: .gitignore  AUDIO_ENGINE_PLAN.md  CMakeLists.txt  README.md  STATUS_REPORT.md  may4test.sime  test.sime
CSV/: 1Shot Kit Acoustic.csv  1Shot Kit SAUCE.csv  1Shot Kit Telecaster.csv  GhostHack Loops.csv  GhostHack One Shots.csv  banjo.csv  bass clarinet.csv  bass drum.csv  bassoon.csv  cello.csv  clarinet.csv  contrabasson.csv  cor anglais.csv  double bass.csv  flute.csv  french horn.csv  guitar.csv  mandolin.csv  oboe.csv  saxophone.csv  sound_library.csv  trombone.csv  trumpet.csv  tuba.csv  viola.csv  violin.csv
Source/: AudioEngine.cpp  AudioEngine.h  BlockEntry.h  BlockType.h  Blockeditpopup.cpp  Blockeditpopup.h  Camera.cpp  Camera.h  ExportAudioDialog.cpp  ExportAudioDialog.h  Main.cpp  MainComponent.cpp  MainComponent.h  Renderer.cpp  SceneAudioExporter.cpp  SceneAudioExporter.h  SceneFile.cpp  SceneFile.h  SequencerEngine.cpp  SequencerEngine.h  SequencerEvent.h  SidebarComponent.cpp  SidebarComponent.h  SoundLibrary.cpp  SoundLibrary.h  SoundPickerComponent.cpp  SoundPickerComponent.h  StartupMenuComponent.cpp  StartupMenuComponent.h  TimelineComponent.cpp  TimelineComponent.h  TransportBarComponent.cpp  TransportBarComponent.h  TransportClock.cpp  TransportClock.h  ViewPortComponent.cpp  ViewPortComponent.h  VoxelGrid.h
Source/Audio/: AudioClip.cpp  AudioClip.h  AudioConfig.h  AudioEngine.cpp  AudioEngine.h  DeviceManagerWrapper.cpp  DeviceManagerWrapper.h  Mixer.cpp  (+17 more)
TestFiles/: AudioEngineTest.sime
md files/: APP_CONTROLS_AND_USAGE_REPORT.md  AUDIO_LIBRARY_REPORT.md  BLOCK_AUDIO_LIBRARY_REPORT.md  BUG_REPORT.md  Block_Movement.md  EXPORT_AUDIO_REPORT.md  OPUS_IMPLEMENTATION_PROMPT.md  SAVE_LOAD_REPORT.md  SEQUENCER_AND_TRANSPORT.md  VIEW_GIZMO_REPORT.md
scripts/: convert_mp3_to_wav.py  rename_and_index_sounds.py
